--- a/1_1_getting_started/index.html
+++ b/1_1_getting_started/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title>Interactive Data Visualization Tutorial</title>
+    <title>Sangeeth Sajan Baby</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <h1>Hello Everyone!</h1>
-    <h3>Tutorial Assignment: 1_1_getting_started </h3>
-    <p>Welcome to Interactive Data Visualization Tutorials! </p>
+    <h3>I'm Sangeeth Sajan Baby</h3>
+    <p>I'm currently pursuing MS in Data Analysis and Visualization at GC,CUNY</p>
   </body>
 </html>
