Getting Started commit

--- a/1_1_getting_started/index.html
+++ b/1_1_getting_started/index.html
@@ -8,6 +8,12 @@
   <body>
     <h1>Hello Everyone!</h1>
     <h3>I'm Sangeeth Sajan Baby</h3>
-    <p>I'm currently pursuing MS in Data Analysis and Visualization at GC,CUNY</p>
+    <h4>I'm currently pursuing MS in Data Analysis and Visualization at GC,CUNY</h4>
+    <p>In my Semester 1, I selected 3 course of 3 credits each</p>
+    <ol>
+      <li>DATA 74000 Data Culture and Society</li>
+      <li>DATA 73200 Interactuve Data Visualization</li>
+      <li>DATA 71000 Data Analysis Methods</li>
+    </ol>
   </body>
 </html>
