--- a/1_2_basic_html/index.html
+++ b/1_2_basic_html/index.html
@@ -6,14 +6,80 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
   <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-  <h1>Hello World!</h1>
-  <h3>Tutorial Assignment: 1_2_basic_html </h3>
-  <table>
-    <!-- Add your table data here -->
+<body background="background.jpeg">
+  <img src="img.png" width="20%"/>
+  <h3>My Education </h3>
+  <label for="fname">Your Name:</label>
+  <input type="text" id="fname" name="fname"></input>
+  <button type="submit">Submit</button>
+  <p></p>
+  <table class="table">
+<thead>
+  <tr>
+    <th>Education</th>
+    <th>Institute</th>
+    <th>Grade</th>
+    <th>Year of Graduation</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>
+      Masters in Data Analysis and Visualization
+    </td>
+    <td>
+      City University of New York
+    </td>
+    <td>
+      N/A
+    </td>
+    <td>
+      2025
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Masters in Artificial Intelligence
+    </td>
+    <td>
+      Amrita University
+    </td>
+    <td>
+      8.02/10
+    </td>
+    <td>
+      2022
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Bachelors in Computer Science
+    </td>
+    <td>
+      Kerala Technological University
+    </td>
+    <td>
+      7.02/10
+    </td>
+    <td>
+      2020
+    </td>
+  </tr>
+</tbody>
   </table>
-  <svg>
-    <!-- Add your rectangles in here -->
+  
+  <svg viewBox="0 0 400 60" xmlns="http://www.w3.org/2000/svg">
+    <rect x="10" y="5" width="180" height="40" rx="20" style="fill:rgb(11, 241, 225);stroke-width:3;stroke:rgb(0,0,0)" />
+    <text x="20" y="30" class="small">Welcome All!</text>
   </svg>
+  <svg viewBox="0 0 600 100" xmlns="http://www.w3.org/2000/svg">
+    <path style="fill:rgb(241, 11, 95);"
+      d="M 10,30
+             A 20,20 0,0,1 50,30
+             A 20,20 0,0,1 90,30
+             Q 90,60 50,90
+             Q 10,60 10,30 z" />
+  </svg>
+  
 </body>
 </html>
