--- a/2_1_quantities_and_amounts/index.html
+++ b/2_1_quantities_and_amounts/index.html
@@ -10,5 +10,8 @@
     <div id="container"></div>
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
+    <div id="container">
+    </div>
+
   </body>
 </html>
