--- a/2_2_distributions/index.html
+++ b/2_2_distributions/index.html
@@ -4,6 +4,20 @@
     <title>Interactive Data Visualization Tutorial</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
     <link rel="stylesheet" href="./style.css">
+    <style>
+      #tooltip {
+  position: absolute;
+  min-width: 150px;
+  min-height: 20px;
+  max-width: 220px;
+  padding: 10px;
+  font-size: 14px;
+  background: lavender;
+  border-radius: 12px;
+  pointer-events: none;
+  font-size: large;
+}
+    </style>
   </head>
   <body>
     <h3>Section 2 | Distributions</h3>
