--- a/2_1_quantities_and_amounts/index.html
+++ b/2_1_quantities_and_amounts/index.html
@@ -4,13 +4,21 @@
     <title>Interactive Data Visualization Tutorial</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
+    <style>
+      #container {
+ position: relative;
+}
+#tooltip {
+  position: absolute;
+}
+    </style>
   </head>
   <body>
-    <h3>Section 2 | Quantities and Amounts</h3>
+    <h3>Section 2 | Quantities and Amounts - Updated Project</h3>
     <div id="container"></div>
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
-    <div id="container">
+    
     </div>
 
   </body>
